<resources>
    <string name="app_name">Quiz(v7.1.1)</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="completed">Congratulations!!</string>
    <string name="congratulations">Congratulations!!</string>
    <string name="time_challenge_msg">You have completed challenge in&#160;</string>
    <string name="sec">&#160;sec&#160;</string>
    <string name="secbattle">sec</string>
    <string name="not_completed">Better Luck Next Tme</string>
    <string name="select_level">Select Level</string>
    <string name="select_category">Select Category</string>
    <string name="select_sub_category">Select SubCategory</string>
    <string name="self_challenge">Self Challenge</string>
    <string name="daily_quiz">Daily Quiz</string>
    <string name="learning_zone">Learning Zone</string>
    <string name="maths_zone" translatable="false">Maths Zone</string>
    <string name="learning_play">Learning Play</string>
    <string name="maths_play" translatable="false">Maths Play</string>
    <string name="account_delete">Account Delete?</string>
    <string name="delete_msg">Are you sure you want to delete your Account?\nThis action cannot be undone.After your account deleted , you will be logged out and all other  active session will be terminated.</string>
    <string name="random_quiz">Random Quiz</string>
    <string name="contest">Contest</string>
    <string name="sound">Sound</string>
    <string name="apply_code">Apply Referral Code</string>
    <string name="Username">Username</string>
    <string name="apply">Apply</string>
    <string name="share_app">Share App</string>
    <string name="update_msg_1">Update the app for a batter experience!</string>
    <string name="not_now">Not Now</string>
    <string name="update_now">Update</string>
    <string name="update_alert">Update Alert</string>
    <string name="vibration">Vibration</string>
    <string name="rateapp">Rate Us</string>
    <string name="bg_music">Background Music</string>
    <string name="share_via">Share via</string>
    <string name="next_play">Play Next Level</string>
    <string name="play_again">Play Again</string>
    <string name="quite">Home</string>
    <string name="review_answer">Review</string>
    <string name="share_score">Share Score</string>
    <string name="share_result">Share Result</string>
    <string name="action_settings">Settings</string>
    <string name="play_next">Play Again</string>
    <string name="lets_play">Let\'s Play</string>
    <string name="instruction">Instruction</string>
    <string name="coinstore">Coin Store</string>
    <string name="msg_no_internet">No internet connection!!</string>
    <string name="no_category">category not available!!</string>
    <string name="no_data">data not found!!</string>
    <string name="ttl_ques">Ques :&#160;</string>
    <string name="select_no_of_question">Select Number Of Questions</string>
    <string name="select_time_period">Select Time Period in Minutes</string>
    <string name="no_sub_category">sub category not available!!</string>
    <string name="no_enough_question">Not enough questions, to play level.</string>
    <string name="no_enough_questiondaily">Daily Quiz not Available or you already played Daily Quiz!!</string>
    <string name="retry">RETRY</string>
    <string name="title">Title</string>
    <string name="lets_start">Let\'s Start</string>
    <string name="hello">Hello,&#160;</string>
    <string name="_coins">&#160;Coins</string>
    <string name="bm_empty_msg">bookmark not available</string>
    <string name="empty_alert_msg">Field should not be empty</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="un_attend">Un-Attempted</string>
    <string name="answer">answer</string>
    <string name="answerbookmark">Answer : </string>
    <string name="extra_note">Extra Note</string>
    <string name="note">Note</string>
    <string name="ok">OKAY</string>
    <string name="ad_attribution">Ad</string>
    <string name="report">Report Question</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="review">Review</string>
    <string name="result">Result</string>
    <string name="title_already_used">Life Line Already Used !!</string>
    <string name="msg_lifeline_used">You can use only once per level</string>
    <string name="self_challenge_sub_msg">Are you sure ?\nYou want to submit this test?</string>
    <string name="true_ans">True Ans: </string>
    <string name="zero">0</string>
    <string name="challenge_time">Challenge Time&#160;</string>
    <string name="loading">Loading…</string>
    <string name="bookmark_list">Bookmark List</string>
    <string name="level_not_available">Level not available</string>
    <string name="go_back">Go Back</string>
    <string name="login">Login</string>
    <string name="signup">CREATE ACCOUNT</string>
    <string name="signup_alert">you are not registered yet, please SignUp</string>
    <string name="invalid_pass">The password is invalid, please check your password</string>
    <string name="email_alert_1">Please enter email address</string>
    <string name="email_alert_2">Please enter valid email address</string>
    <string name="pass_alert">Please enter password</string>
    <string name="from_camera">Capture from Camera</string>
    <string name="verify_email_sent">Verification email sent to &#160;</string>
    <string name="verify_email_sent_f">Failed to send verification email.</string>
    <string name="ref_code">Referral code</string>
    <string name="act_verify_1">A Verified link has been sent to your email account</string>
    <string name="act_verify_2">Please click on the link that has just been sent to your email account to verify your email and continue the login process.</string>
    <string name="account_deactivate">Your Account is deactivate by admin</string>
    <string name="select_language">Select Language</string>
    <string name="refer_share_msg_1">I have earned coins using&#160;</string>
    <string name="refer_share_msg_2">&#160;app. you can also earn coin by downloading app from below link and enter referral code while login-&#160; </string>
    <string name="msg_enough_coin">Not Enough Coins !!</string>
    <string name="coin_message1">You don\'t have enough coins. You need at least&#160;</string>
    <string name="coin_message2">&#160;coins to use this lifeline. \n\nWatch a short video &amp; get free coins</string>
    <string name="not_enough_coin">You don\'t have enough coins.</string>
    <string name="not_enough_coinorpurchase" translatable="false">You need more coins or You didn\'t buy Category.</string>
    <string name="skip">Skip</string>
    <string name="msg_watch_video">Watch Now</string>
    <string name="attended">Attended Ques</string>
    <string name="correct_ans">Correct Ans</string>
    <string name="correct">Correct</string>
    <string name="incorrect">InCorrect</string>
    <string name="color_code">Color Code</string>
    <string name="report_hint">Type a message</string>
    <string name="about_us">About Us</string>
    <string name="exit_msg">Do you want to exit the level?</string>
    <string name="exit_msg_quiz">Do you want to exit the Quiz?</string>
    <string name="bookmark_play">Play Bookmark</string>
    <string name="all_complete_msg">You have Completed All Questions !!</string>
    <string name="leave_msg_1">Are you sure?</string>
    <string name="leave_msg_2">You haven\'t submitted this test yet. Are you sure you wan to leave?</string>
    <string name="battle_msg1">\u25CF This will allow player vs player battle</string>
    <string name="battle_msg2">\u25CF If not found any player to a battle, you can battle with the robot</string>
    <string name="battle_msg3">\u25CF For battle, same questions will be served for both the player
        &amp; the winner will be declared base on no of right answers</string>
    <string name="has_option">Quiz game has 4 options</string>
    <string name="msg_right">For each right answer 5 points will be given.</string>
    <string name="msg_wrong">minus 2 points for each question</string>
    <string name="msg_lifeline">Use of Lifeline  : You can use only once per level</string>
    <string name="msg_fifty_fifty">50 – 50 : for remove two option out of Four(deduct 4 coins ).</string>
    <string name="msg_skip">Skip question: you can pass question without minus points(deduct 2 coins).</string>
    <string name="msg_opinion">Audience poll: use audience paul for check other users choose option(deduct 4 coins).</string>
    <string name="msg_reset">Reset timer: Reset timer again if you needed more time score (deduct 2 coins).</string>
    <string name="msg_leaderboard">You can compare your score with other users of apps</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="textsize_dialog_lbl_fontsize">Font Size</string>
    <string name="font_size">Font Size</string>
    <string name="level_locked">Level is Locked</string>
    <string name="update_profile">Update Profile</string>
    <string name="user_statistics">User Statistics</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="back">BACK</string>
    <string name="play_quiz">Quiz Zone</string>
    <string name="play">Play</string>
    <string name="battle_quiz">Battle Quiz</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="notification">Notification</string>
    <string name="show_answer">Show Answer</string>
    <string name="from_library">Choose from Library</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_valid">Password should be at least 6 characters</string>
    <string name="refer">Referral Code</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="reset_pass">Enter the email address you used when creating the account. A message will be sent to that address containing a link to reset your password.</string>
    <string name="logout">Logout</string>
    <string name="rank">Rank</string>
    <string name="score">Score</string>
    <string name="coins">Coins</string>
    <string name="statistics">Statistics</string>
    <string name="term_privacy">By Logging / SigningUp in, you agree to our \nTerms of Service and Privacy Policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms">Terms of Service</string>
    <string name="modulo_sign">%</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="exit">EXIT</string>
    <string name="play_with_computer1">Play With Robot</string>
    <string name="congrats">Congratulation</string>
    <string name="next_time">Batter Luck Next Time!!</string>
    <string name="robot">Robot</string>
    <string name="level">Level</string>
    <string name="msg_player_not_available"><h3><b>Oops!</b></h3>\n Player Not Available For Battle!!</string>
    <string name="question_not_available">Question Not Available</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="invite_frnd">Invite friends</string>
    <string name="logout_msg">Are you sure!!\nYou want to Log out?</string>
    <string name="user_join_alert">Oopps!! No User Join</string>
    <string name="user_join_alert_msg">Look like no user join game yet.</string>
    <string name="device_language">Device Language</string>
    <string name="profile_permission"><![CDATA[Profile picture Change You need to give permission. You can give permission From Android Setting -> App.]]></string>
    <string name="permission_grant">Permission Grant</string>
</resources>