<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/main_btn"
    android:backgroundTint="@color/bg_color"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_dp"
        android:layout_marginTop="@dimen/margin_dp"
        android:layout_marginEnd="@dimen/margin_dp"
        android:text="@string/leave_msg_1"
        android:textColor="@color/black"
        android:textSize="@dimen/mid_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="@dimen/margin_dp"
        android:text="@string/leave_msg_2"
        android:textColor="@color/black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnResume"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_dp"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/mid_text" />

        <Button
            android:id="@+id/btnLeave"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textSize="@dimen/mid_text" />

    </LinearLayout>
</LinearLayout>