<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/main_btn"
    android:backgroundTint="@color/bg_color"
    android:paddingBottom="@dimen/margin_20dp"
    android:paddingTop="@dimen/margin_20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/report"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:layout_marginStart="@dimen/margin_20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textColor="@color/txt_color" />


        <EditText
            android:id="@+id/edtReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/report_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginStart="@dimen/margin_20dp"
        android:layout_marginEnd="@dimen/margin_20dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_10dp"
            android:layout_weight="1"
            android:background="@drawable/left_btn_bg"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/mid_text"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10dp"
            android:layout_weight="1"
            android:background="@drawable/gradientcurve_bg"
            android:gravity="center"
            android:padding="7dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="@dimen/mid_text"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>