<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/main_btn"
    android:backgroundTint="@color/bg_color"
    android:orientation="vertical"
    android:layout_margin="@dimen/margin_dp"
    android:paddingBottom="@dimen/padding_10"
   >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="@dimen/padding_10"
        android:gravity="center"
        android:text="@string/msg_enough_coin"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_10"
        android:layout_marginStart="@dimen/padding_10"
        android:layout_marginEnd="@dimen/padding_10"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tvCoinMSg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/coin_message1"
            android:textColor="@color/black"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_20dp"
        android:layout_marginStart="@dimen/padding_10"
        android:layout_marginEnd="@dimen/padding_10"
        android:layout_marginBottom="@dimen/padding_10"
        android:weightSum="2">

        <TextView
            android:id="@+id/skip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="7dp"
            android:layout_marginStart="@dimen/margin_dp"
            android:layout_weight="1"
            android:text="@string/skip"
            android:background="@drawable/left_btn_bg"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/watch_now"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="7dp"
            android:layout_marginStart="@dimen/margin_dp"
            android:layout_marginEnd="@dimen/margin_dp"
            android:background="@drawable/gradientcurve_bg"
            android:text="@string/msg_watch_video"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>

