<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_dp"
    android:background="@drawable/main_btn"
    android:backgroundTint="@color/bg_color"
    android:paddingBottom="@dimen/margin_20dp"
    android:paddingTop="@dimen/margin_20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/margin_10dp"
        android:text="@string/permission_grant"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_10dp">



        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/profile_permission"
            android:textColor="@color/black"
            android:textSize="@dimen/textsize_18"
            android:textStyle="bold" />


    </LinearLayout>

    <TextView
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_dp"
        android:background="@drawable/left_btn_bg"
        android:gravity="center"
        android:paddingStart="@dimen/circle_height"
        android:paddingTop="7dp"
        android:paddingEnd="@dimen/circle_height"
        android:paddingBottom="7dp"
        android:text="@string/ok"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/mid_text"
        android:textStyle="bold" />
</LinearLayout>