<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_10dp"
    android:background="@drawable/main_btn"
    android:backgroundTint="@color/bg_color"
    android:orientation="vertical"
    android:paddingTop="@dimen/margin_20dp"
    android:paddingBottom="@dimen/margin_20dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:padding="7dp"
            android:text="@string/self_challenge"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:gravity="center"
                android:text="@string/self_challenge_sub_msg"
                android:textColor="@color/black"
                android:textSize="@dimen/mid_text" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="@dimen/margin_dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/btnNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_dp"
                android:layout_marginEnd="@dimen/margin_dp"
                android:layout_weight="1"
                android:background="@drawable/left_btn_bg"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/no"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btnYes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_dp"
                android:layout_marginEnd="@dimen/margin_dp"
                android:layout_weight="1"
                android:background="@drawable/gradientcurve_bg"
                android:gravity="center"
                android:padding="7dp"
                android:text="@string/yes"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>