<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="30dp"
    android:paddingBottom="30dp"
    android:layout_marginEnd="@dimen/padding_10"
    android:layout_marginStart="@dimen/padding_10"
    android:background="@drawable/main_btn"
    android:backgroundTint="@color/bg_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:padding="7dp"
            android:text="@string/logout"
            android:textAllCaps="true"
            android:fontFamily="@font/open_sans_bold"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_sadpuppy"
            android:layout_marginTop="@dimen/padding_10"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_10">

            <TextView
                android:id="@+id/tv_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_10dp"
                android:gravity="center"
                android:text="@string/logout_msg"
                android:textColor="@color/black"
                android:textSize="18sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="@dimen/margin_20dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/tvYes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/logout_btn"
                android:gravity="center_horizontal"
                android:textSize="16sp"
                android:layout_marginStart="@dimen/padding_10"
                android:padding="@dimen/padding_10"
                android:layout_marginEnd="@dimen/padding_10"
                android:text="@string/yes"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/gradientcurve_bg"
                android:gravity="center"
                android:layout_marginStart="@dimen/padding_10"
                android:textSize="16sp"
                android:padding="@dimen/padding_10"
                android:layout_marginEnd="@dimen/padding_10"
                android:text="@string/no"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
